# OTUS

./: .gitignore  CMakeLists.txt  OTUS.sln  README.md
.github/workflows/: cmake.yml  release.yml  release_ubuntu.yml  release_win.yml
Homework1/: CMakeLists.txt  main.cpp
homework_1/: CMakeLists.txt  main.cpp  version.h.in
homework_2/: CMakeLists.txt  IPReader.cpp  IPReader.h  homework_2.vcxproj  homework_2.vcxproj.filters  main.cpp
